# cv_cls_acc

./: .gitignore  Makefile  README.md  config.py  dev-requirements.txt  dvc.yaml  main.py  pyproject.toml  requirements.txt  setup.py
auxiliary_functions/: aux_functions.py  data_agregation.py
cv_cls_acc/: __init__.py  config.py
cv_cls_acc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cv_cls_acc/models/: __init__.py  models_pt.py
data/age-regression/6/: rekognition-age-output-attrs-fixed.csv
experiments/: params.yml  run_experiment.yml
experiments/src/: train.py
finetuning/: finetuning.py
models/: models_pt.py  models_tf.py  visual_transformers.py
src/: build_datasets.py  evaluate.py  preprocess.py  train.py
tests/: evaluate_models.py  test_models_pt.py
